--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <button class="btn">Alternar Pesquisa</button>
+    <button class="btn">Ativar Pesquisa</button>
     <div class="message"></div>
     <script src="popup.js"></script> 
 </body>
